# go1-project

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  codefornano.py  dependencies  gestures.py  main.py  run.cpp  test.py
python/: gestures.py
scripts/: gestures.py  main.py
src/: run.cpp
unitree_camera_sdk/: Dockerfile
unitree_camera_sdk_docker/: Dockerfile
unitree_legged_sdk/: Dockerfile
unitree_legged_sdk_docker/: Dockerfile
unitree_legged_sdk_python/: Dockerfile  main.py
